// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery Default renders correctly 1`] = `
<section
  class="ecl-gallery"
  data-ecl-auto-init="Gallery"
  data-ecl-gallery=""
>
  <ul
    class="ecl-gallery__list"
  >
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 1"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 1"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            The EU in brief, institutions and bodies, countries, symbols, history, facts and figures                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 1
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="New digital strategy"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-embed-src="https://www.youtube.com/embed/fgi-GSCB6ho"
        href="https://www.youtube.com/embed/fgi-GSCB6ho"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="New digital strategy"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-external-video.jpg"
          />
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-gallery__image-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--video"
            />
          </svg>
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            New digital strategy
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-gallery__description-icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#general--video"
              />
            </svg>
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for embedded media
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 2"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image2.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image2.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 2"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image2.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            Information on agriculture, business, culture, health, etc.                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 2
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 3"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image3.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image3.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 3"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image3.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            Living, working, travelling in the EU                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 3
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 4"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image4.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image4.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 4"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image4.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            Information on taxes, customs, importing and exporting goods, financial support for businesses                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 4
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image5.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.mp4"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <video
            class="ecl-gallery__image"
            poster="https://inno-ecl.s3.amazonaws.com/media/examples/example-image5.jpg"
          >
            <source
              src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.mp4"
              type="video/mp4"
            />
            <source
              src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.webm"
              type="video/webm"
            />
            <track
              kind="captions"
              label="English"
              src="/captions/bunny-en.vtt"
              srclang="en"
            />
            <track
              kind="captions"
              label="français"
              src="/captions/bunny-fr.vtt"
              srclang="fr"
            />
          </video>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-gallery__image-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--video"
            />
          </svg>
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            EU law
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-gallery__description-icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#general--video"
              />
            </svg>
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 5
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 6"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image6.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image6.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 6"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image6.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            Find official documents, publications, statistics, open data and more resources                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 6
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 7"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image7.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image7.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 7"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image7.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            Teaching material about the EU, including books and maps                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 7
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image8.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.mp4"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <video
            class="ecl-gallery__image"
            poster="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
          >
            <source
              src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.mp4"
              type="video/mp4"
            />
            <source
              src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.webm"
              type="video/webm"
            />
            <track
              kind="captions"
              label="English"
              src="/captions/bunny-en.vtt"
              srclang="en"
            />
            <track
              kind="captions"
              label="français"
              src="/captions/bunny-fr.vtt"
              srclang="fr"
            />
          </video>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-gallery__image-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--video"
            />
          </svg>
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            Kids' Corner
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-gallery__description-icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#general--video"
              />
            </svg>
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 8
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 9"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-imag9e.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image9.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 9"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image9.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            About the EU                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 9
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 10"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image10.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image10.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 10"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image10.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            EU by topic                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 10
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
  </ul>
  <div
    class="ecl-gallery__info"
  >
    <strong
      data-ecl-gallery-count=""
    >
      0
    </strong>
     Media files in this gallery
  </div>
  <button
    class="ecl-button ecl-button--ghost"
    data-ecl-gallery-all=""
    type="submit"
  >
    View all
  </button>
  <div
    class="ecl-gallery__footer"
  >
    <a
      aria-label="View all link aria-label value"
      class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after"
      href="/example"
    >
      <span
        class="ecl-link__label"
      >
        Link to further media items
      </span>
       
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--s ecl-link__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#ui--external"
        />
      </svg>
    </a>
  </div>
  <dialog
    class="ecl-gallery__overlay"
    data-ecl-gallery-overlay=""
  >
    <header
      class="ecl-gallery__close"
      data-ecl-gallery-overlay-header=""
    >
      <button
        class="ecl-button ecl-button--ghost ecl-gallery__close-button"
        data-ecl-gallery-close=""
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Close
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/media/icons.3cf410f9.svg#ui--close"
            />
          </svg>
        </span>
      </button>
    </header>
    <section
      class="ecl-gallery__slider"
    >
      <div
        class="ecl-gallery__slider-media-container"
        data-ecl-gallery-overlay-media=""
      />
      <button
        class="ecl-button ecl-button--ghost ecl-gallery__slider-previous"
        data-ecl-gallery-overlay-previous=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-icon--rotate-270 ecl-button__icon ecl-button__icon--before"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/media/icons.3cf410f9.svg#ui--corner-arrow"
            />
          </svg>
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Previous
          </span>
        </span>
      </button>
      <button
        class="ecl-button ecl-button--ghost ecl-gallery__slider-next"
        data-ecl-gallery-overlay-next=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Next
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/media/icons.3cf410f9.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
    </section>
    <footer
      class="ecl-gallery__detail"
      data-ecl-gallery-overlay-footer=""
    >
      <div
        class="ecl-gallery__detail-counter"
      >
        <span
          data-ecl-gallery-overlay-counter-current=""
        >
          0
        </span>
         of 
        <span
          data-ecl-gallery-overlay-counter-max=""
        >
          0
        </span>
      </div>
      <div
        class="ecl-gallery__detail-actions"
      >
        <a
          class="ecl-link ecl-link--default ecl-link--icon ecl-link--icon-after ecl-gallery__download"
          data-ecl-gallery-overlay-download=""
          download=""
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Download
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--download"
            />
          </svg>
        </a>
        <a
          class="ecl-link ecl-link--default ecl-link--icon ecl-link--icon-after ecl-gallery__share"
          data-ecl-gallery-overlay-share=""
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Share
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--share"
            />
          </svg>
        </a>
      </div>
      <div
        class="ecl-gallery__detail-description"
        data-ecl-gallery-overlay-description=""
      >
        The EU in brief, institutions and bodies, countries, symbols, history, facts and figures
      </div>
      <div
        class="ecl-gallery__detail-meta"
        data-ecl-gallery-overlay-meta=""
      >
        Copyright, Author, Licence for image 1
      </div>
    </footer>
  </dialog>
</section>
`;

exports[`Gallery Default renders correctly with extra attributes 1`] = `
<section
  class="ecl-gallery"
  data-ecl-auto-init="Gallery"
  data-ecl-gallery=""
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <ul
    class="ecl-gallery__list"
  >
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 1"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 1"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            The EU in brief, institutions and bodies, countries, symbols, history, facts and figures                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 1
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="New digital strategy"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-embed-src="https://www.youtube.com/embed/fgi-GSCB6ho"
        href="https://www.youtube.com/embed/fgi-GSCB6ho"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="New digital strategy"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-external-video.jpg"
          />
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-gallery__image-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--video"
            />
          </svg>
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            New digital strategy
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-gallery__description-icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#general--video"
              />
            </svg>
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for embedded media
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 2"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image2.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image2.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 2"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image2.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            Information on agriculture, business, culture, health, etc.                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 2
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 3"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image3.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image3.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 3"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image3.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            Living, working, travelling in the EU                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 3
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 4"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image4.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image4.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 4"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image4.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            Information on taxes, customs, importing and exporting goods, financial support for businesses                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 4
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image5.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.mp4"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <video
            class="ecl-gallery__image"
            poster="https://inno-ecl.s3.amazonaws.com/media/examples/example-image5.jpg"
          >
            <source
              src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.mp4"
              type="video/mp4"
            />
            <source
              src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.webm"
              type="video/webm"
            />
            <track
              kind="captions"
              label="English"
              src="/captions/bunny-en.vtt"
              srclang="en"
            />
            <track
              kind="captions"
              label="français"
              src="/captions/bunny-fr.vtt"
              srclang="fr"
            />
          </video>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-gallery__image-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--video"
            />
          </svg>
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            EU law
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-gallery__description-icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#general--video"
              />
            </svg>
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 5
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 6"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image6.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image6.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 6"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image6.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            Find official documents, publications, statistics, open data and more resources                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 6
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 7"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image7.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image7.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 7"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image7.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            Teaching material about the EU, including books and maps                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 7
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image8.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.mp4"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <video
            class="ecl-gallery__image"
            poster="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
          >
            <source
              src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.mp4"
              type="video/mp4"
            />
            <source
              src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.webm"
              type="video/webm"
            />
            <track
              kind="captions"
              label="English"
              src="/captions/bunny-en.vtt"
              srclang="en"
            />
            <track
              kind="captions"
              label="français"
              src="/captions/bunny-fr.vtt"
              srclang="fr"
            />
          </video>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-gallery__image-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--video"
            />
          </svg>
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            Kids' Corner
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-gallery__description-icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#general--video"
              />
            </svg>
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 8
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 9"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-imag9e.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image9.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 9"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image9.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            About the EU                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 9
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 10"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image10.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image10.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 10"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image10.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            EU by topic                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 10
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
  </ul>
  <div
    class="ecl-gallery__info"
  >
    <strong
      data-ecl-gallery-count=""
    >
      0
    </strong>
     Media files in this gallery
  </div>
  <button
    class="ecl-button ecl-button--ghost"
    data-ecl-gallery-all=""
    type="submit"
  >
    View all
  </button>
  <div
    class="ecl-gallery__footer"
  >
    <a
      aria-label="View all link aria-label value"
      class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after"
      href="/example"
    >
      <span
        class="ecl-link__label"
      >
        Link to further media items
      </span>
       
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--s ecl-link__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#ui--external"
        />
      </svg>
    </a>
  </div>
  <dialog
    class="ecl-gallery__overlay"
    data-ecl-gallery-overlay=""
  >
    <header
      class="ecl-gallery__close"
      data-ecl-gallery-overlay-header=""
    >
      <button
        class="ecl-button ecl-button--ghost ecl-gallery__close-button"
        data-ecl-gallery-close=""
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Close
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/media/icons.3cf410f9.svg#ui--close"
            />
          </svg>
        </span>
      </button>
    </header>
    <section
      class="ecl-gallery__slider"
    >
      <div
        class="ecl-gallery__slider-media-container"
        data-ecl-gallery-overlay-media=""
      />
      <button
        class="ecl-button ecl-button--ghost ecl-gallery__slider-previous"
        data-ecl-gallery-overlay-previous=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-icon--rotate-270 ecl-button__icon ecl-button__icon--before"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/media/icons.3cf410f9.svg#ui--corner-arrow"
            />
          </svg>
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Previous
          </span>
        </span>
      </button>
      <button
        class="ecl-button ecl-button--ghost ecl-gallery__slider-next"
        data-ecl-gallery-overlay-next=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Next
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/media/icons.3cf410f9.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
    </section>
    <footer
      class="ecl-gallery__detail"
      data-ecl-gallery-overlay-footer=""
    >
      <div
        class="ecl-gallery__detail-counter"
      >
        <span
          data-ecl-gallery-overlay-counter-current=""
        >
          0
        </span>
         of 
        <span
          data-ecl-gallery-overlay-counter-max=""
        >
          0
        </span>
      </div>
      <div
        class="ecl-gallery__detail-actions"
      >
        <a
          class="ecl-link ecl-link--default ecl-link--icon ecl-link--icon-after ecl-gallery__download"
          data-ecl-gallery-overlay-download=""
          download=""
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Download
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--download"
            />
          </svg>
        </a>
        <a
          class="ecl-link ecl-link--default ecl-link--icon ecl-link--icon-after ecl-gallery__share"
          data-ecl-gallery-overlay-share=""
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Share
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--share"
            />
          </svg>
        </a>
      </div>
      <div
        class="ecl-gallery__detail-description"
        data-ecl-gallery-overlay-description=""
      >
        The EU in brief, institutions and bodies, countries, symbols, history, facts and figures
      </div>
      <div
        class="ecl-gallery__detail-meta"
        data-ecl-gallery-overlay-meta=""
      >
        Copyright, Author, Licence for image 1
      </div>
    </footer>
  </dialog>
</section>
`;

exports[`Gallery Default renders correctly with extra class names 1`] = `
<section
  class="ecl-gallery custom-class custom-class--test"
  data-ecl-auto-init="Gallery"
  data-ecl-gallery=""
>
  <ul
    class="ecl-gallery__list"
  >
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 1"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 1"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            The EU in brief, institutions and bodies, countries, symbols, history, facts and figures                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 1
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="New digital strategy"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-embed-src="https://www.youtube.com/embed/fgi-GSCB6ho"
        href="https://www.youtube.com/embed/fgi-GSCB6ho"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="New digital strategy"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-external-video.jpg"
          />
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-gallery__image-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--video"
            />
          </svg>
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            New digital strategy
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-gallery__description-icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#general--video"
              />
            </svg>
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for embedded media
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 2"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image2.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image2.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 2"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image2.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            Information on agriculture, business, culture, health, etc.                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 2
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 3"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image3.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image3.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 3"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image3.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            Living, working, travelling in the EU                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 3
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 4"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image4.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image4.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 4"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image4.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            Information on taxes, customs, importing and exporting goods, financial support for businesses                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 4
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image5.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.mp4"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <video
            class="ecl-gallery__image"
            poster="https://inno-ecl.s3.amazonaws.com/media/examples/example-image5.jpg"
          >
            <source
              src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.mp4"
              type="video/mp4"
            />
            <source
              src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.webm"
              type="video/webm"
            />
            <track
              kind="captions"
              label="English"
              src="/captions/bunny-en.vtt"
              srclang="en"
            />
            <track
              kind="captions"
              label="français"
              src="/captions/bunny-fr.vtt"
              srclang="fr"
            />
          </video>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-gallery__image-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--video"
            />
          </svg>
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            EU law
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-gallery__description-icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#general--video"
              />
            </svg>
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 5
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 6"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image6.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image6.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 6"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image6.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            Find official documents, publications, statistics, open data and more resources                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 6
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 7"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image7.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image7.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 7"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image7.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            Teaching material about the EU, including books and maps                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 7
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image8.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.mp4"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <video
            class="ecl-gallery__image"
            poster="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
          >
            <source
              src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.mp4"
              type="video/mp4"
            />
            <source
              src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.webm"
              type="video/webm"
            />
            <track
              kind="captions"
              label="English"
              src="/captions/bunny-en.vtt"
              srclang="en"
            />
            <track
              kind="captions"
              label="français"
              src="/captions/bunny-fr.vtt"
              srclang="fr"
            />
          </video>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-gallery__image-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--video"
            />
          </svg>
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            Kids' Corner
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-gallery__description-icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#general--video"
              />
            </svg>
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 8
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 9"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-imag9e.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image9.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 9"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image9.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            About the EU                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 9
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="ecl-gallery__item"
    >
      <a
        aria-label="Image 10"
        class="ecl-gallery__item-link"
        data-ecl-gallery-item=""
        data-ecl-gallery-item-share="/share#example-image10.jpg"
        href="https://inno-ecl.s3.amazonaws.com/media/examples/example-image10.jpg"
      >
        <figure
          class="ecl-gallery__image-container"
        >
          <img
            alt="Image 10"
            class="ecl-gallery__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image10.jpg"
          />
          <figcaption
            class="ecl-gallery__description"
            data-ecl-gallery-description=""
          >
            EU by topic                
            <span
              class="ecl-gallery__meta"
              data-ecl-gallery-meta=""
            >
              Copyright, Author, Licence for image 10
            </span>
          </figcaption>
        </figure>
      </a>
    </li>
  </ul>
  <div
    class="ecl-gallery__info"
  >
    <strong
      data-ecl-gallery-count=""
    >
      0
    </strong>
     Media files in this gallery
  </div>
  <button
    class="ecl-button ecl-button--ghost"
    data-ecl-gallery-all=""
    type="submit"
  >
    View all
  </button>
  <div
    class="ecl-gallery__footer"
  >
    <a
      aria-label="View all link aria-label value"
      class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after"
      href="/example"
    >
      <span
        class="ecl-link__label"
      >
        Link to further media items
      </span>
       
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--s ecl-link__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#ui--external"
        />
      </svg>
    </a>
  </div>
  <dialog
    class="ecl-gallery__overlay"
    data-ecl-gallery-overlay=""
  >
    <header
      class="ecl-gallery__close"
      data-ecl-gallery-overlay-header=""
    >
      <button
        class="ecl-button ecl-button--ghost ecl-gallery__close-button"
        data-ecl-gallery-close=""
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Close
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/media/icons.3cf410f9.svg#ui--close"
            />
          </svg>
        </span>
      </button>
    </header>
    <section
      class="ecl-gallery__slider"
    >
      <div
        class="ecl-gallery__slider-media-container"
        data-ecl-gallery-overlay-media=""
      />
      <button
        class="ecl-button ecl-button--ghost ecl-gallery__slider-previous"
        data-ecl-gallery-overlay-previous=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-icon--rotate-270 ecl-button__icon ecl-button__icon--before"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/media/icons.3cf410f9.svg#ui--corner-arrow"
            />
          </svg>
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Previous
          </span>
        </span>
      </button>
      <button
        class="ecl-button ecl-button--ghost ecl-gallery__slider-next"
        data-ecl-gallery-overlay-next=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Next
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/media/icons.3cf410f9.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
    </section>
    <footer
      class="ecl-gallery__detail"
      data-ecl-gallery-overlay-footer=""
    >
      <div
        class="ecl-gallery__detail-counter"
      >
        <span
          data-ecl-gallery-overlay-counter-current=""
        >
          0
        </span>
         of 
        <span
          data-ecl-gallery-overlay-counter-max=""
        >
          0
        </span>
      </div>
      <div
        class="ecl-gallery__detail-actions"
      >
        <a
          class="ecl-link ecl-link--default ecl-link--icon ecl-link--icon-after ecl-gallery__download"
          data-ecl-gallery-overlay-download=""
          download=""
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Download
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--download"
            />
          </svg>
        </a>
        <a
          class="ecl-link ecl-link--default ecl-link--icon ecl-link--icon-after ecl-gallery__share"
          data-ecl-gallery-overlay-share=""
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Share
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--share"
            />
          </svg>
        </a>
      </div>
      <div
        class="ecl-gallery__detail-description"
        data-ecl-gallery-overlay-description=""
      >
        The EU in brief, institutions and bodies, countries, symbols, history, facts and figures
      </div>
      <div
        class="ecl-gallery__detail-meta"
        data-ecl-gallery-overlay-meta=""
      >
        Copyright, Author, Licence for image 1
      </div>
    </footer>
  </dialog>
</section>
`;
